pkg/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>MacroArea__c</fullName>
        <label>Macro Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CUSTOMER &amp; MARKETING</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE TECHNOLOGY &amp; PERFORMANCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufatura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manufatura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_External_Integrations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud External Integrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Scripting_Languages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud Scripting Languages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_and_Entertainment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Technology, Media and Telecom</inlineHelpText>
        <label>Media and Entertainment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mining_and_Metals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Energy, Resources and Industrials</inlineHelpText>
        <label>Mining and Metals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthAdmission__c</fullName>
        <formula>CASE(MONTH( AdmissionDate__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;Aug&quot;,
9, &quot;Sept&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês de Admissão</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthYearAdmission__c</fullName>
        <formula>MonthAdmission__c &amp; &quot;/&quot; &amp; AdmissionYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês/Ano de Admissão</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Campo para registrar o bairro do funcionário.</description>
        <inlineHelpText>Bairro do funcionário</inlineHelpText>
        <label>Neighborhood</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotaToeic__c</fullName>
        <label>Nota TOEIC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_da_Residencia__c</fullName>
        <label>Número da Residência</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Certificacoes__c</fullName>
        <label>Número de Certificações</label>
        <summaryForeignKey>Certification__c.Employee_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIGITAL CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE TECHNOLOGY &amp; PERFORMANCE RJ</fullName>
                </value>
                <value>
                    <fullName>TECHNOLOGY PROGRAMMES</fullName>
                </value>
                <value>
                    <fullName>DELIVERY CENTER RE</fullName>
                </value>
                <value>
                    <fullName>OPERATE</fullName>
                </value>
                <value>
                    <fullName>APPLICATION DC</fullName>
                    <isActive>false</isActive>
                    <label>APPLICATION DC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Campo para registrar o escritório do funcionário.</description>
        <inlineHelpText>Escritório do funcionário.</inlineHelpText>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campinas</fullName>
                </value>
                <value>
                    <fullName>Distrito Federal</fullName>
                </value>
                <value>
                    <fullName>Rio de Janeiro</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Recife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oil_Gas_and_Chemicals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Energy, Resources and Industrials</inlineHelpText>
        <label>Oil/Gas/Chemicals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pardot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patio__c</fullName>
        <description>Campo para registrar o logradouro do funcionário.</description>
        <inlineHelpText>Logradouro do funcionário.</inlineHelpText>
        <label>Patio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personalization_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personalization Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Philantropy_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Philantropy Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Campo para registrar o telefone do funcionário.</description>
        <inlineHelpText>Telefone do funcionário</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <description>Campo para registrar o Pilar do funcionário.</description>
        <inlineHelpText>Pilar do funcionário.</inlineHelpText>
        <label>Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>CS&amp;AD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pontos_de_Alocacao__c</fullName>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontos de Alocação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontos_de_Certificacao__c</fullName>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontos de Certificação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontos_de_Requisicoes__c</fullName>
        <description>Somatória dos pontos das requisições do funcionário.</description>
        <label>Pontos de Requisições</label>
        <summarizedField>Requisicoes__c.Pontos__c</summarizedField>
        <summaryForeignKey>Requisicoes__c.Requerente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pontos_distribuidos__c</fullName>
        <label>Pontos distribuídos</label>
        <summarizedField>Gameficacao__c.Ponto__c</summarizedField>
        <summaryForeignKey>Gameficacao__c.Distribuidor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pontos_recebidos__c</fullName>
        <label>Pontos recebidos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_Recebida_Max_Permitida__c</fullName>
        <formula>IF( Pontos_recebidos__c &gt;= 500, 500, Pontos_recebidos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontuação Recebida (Max. Permitida)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_Snapshot__c</fullName>
        <formula>IF (  Quantidade_de_Snapshots__c &gt;= 3, 50, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontuação Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_TOEIC__c</fullName>
        <formula>NotaToeic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontuação TOEIC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_das_Requisicoes__c</fullName>
        <inlineHelpText>Pontos por requisição caso o documento foi utilizado nos últimos 30 dias.</inlineHelpText>
        <label>Pontuação das Requisições (30 dias)</label>
        <summarizedField>Requisicoes__c.Ponto_por_utilizacao__c</summarizedField>
        <summaryForeignKey>Requisicoes__c.Requerente__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pontuacao_das_Revisoes__c</fullName>
        <description>Pontuação referente às revisões sugeridas pelo funcionário.</description>
        <label>Pontuação das Revisões</label>
        <summarizedField>Revisoes_Documentais__c.Pontos__c</summarizedField>
        <summaryForeignKey>Revisoes_Documentais__c.Revisor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Power_and_Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Energy, Resources and Industrials</inlineHelpText>
        <label>Power and Utilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Prática</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC - ALL</fullName>
                </value>
                <value>
                    <fullName>DC - ORACLE</fullName>
                </value>
                <value>
                    <fullName>DC - Premmia</fullName>
                </value>
                <value>
                    <fullName>DC - SALESFORCE / Angular Frond End</fullName>
                    <label>DC - SALESFORCE/Angular Frond End</label>
                </value>
                <value>
                    <fullName>DC - SAP</fullName>
                </value>
                <value>
                    <fullName>DC - SERASA</fullName>
                </value>
                <value>
                    <fullName>DC - SI</fullName>
                </value>
                <value>
                    <fullName>DC - SUCCESSFACTORS</fullName>
                </value>
                <value>
                    <fullName>OPERATE - SALESFORCE</fullName>
                </value>
                <value>
                    <fullName>OPERATE - VLOCITY</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS / EA SAP</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS / EA SAP / TSA</fullName>
                    <label>SALESFORCE/DIGITAL SOLUTIONS/EA SAP/TSA</label>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS/MOBILE</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS / TMT</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/DIGITAL SOLUTIONS / TS&amp;T</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/EA SAP</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE/TSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileDPNLink__c</fullName>
        <description>Campo URL para acesso ao perfil DPN do funcionário.</description>
        <inlineHelpText>DPN do funcionário.</inlineHelpText>
        <label>Profile DPN Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Projeto_test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projeto test</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Funcion_rios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantidade_de_Snapshots__c</fullName>
        <label>Quantidade de Snapshots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Financial Services</inlineHelpText>
        <label>Real Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recebeu_de_3_pessoas_ou_mais__c</fullName>
        <formula>IF(  Recebeu_de_quantas_pessoas__c &gt;= 3, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recebeu de 3 pessoas ou mais?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recebeu_de_quantas_pessoas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recebeu de quantas pessoas?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResidenceNumber__c</fullName>
        <description>Campo para registrar o número da residência do funcionário</description>
        <inlineHelpText>Número de residência do funcionário</inlineHelpText>
        <label>Residence Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Wholesale_and_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Consumer</inlineHelpText>
        <label>Varejo/Atacado/Distribuição</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Campo para registrar o cargo do funcionário.</description>
        <inlineHelpText>Cargo do funcionário</inlineHelpText>
        <label>Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADMINISTRATIVO</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE NEGOCIOS 1</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE NEGOCIOS 2</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS JUNIOR 1</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS JUNIOR 2</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS JUNIOR 3</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS PLENO 1</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS PLENO 2</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS PLENO 3</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS SENIOR 1</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS SENIOR 2</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS SENIOR 3</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS SENIOR 4</fullName>
                </value>
                <value>
                    <fullName>ANALISTA DE SISTEMAS SENIOR ESPECIALISTA</fullName>
                </value>
                <value>
                    <fullName>ARQUITETO ESPECIALISTA DE SOLUÇÕES 1</fullName>
                </value>
                <value>
                    <fullName>ARQUITETO ESPECIALISTA DE SOLUÇÕES 2</fullName>
                </value>
                <value>
                    <fullName>ARQUITETO ESPECIALISTA DE SOLUÇÕES 3</fullName>
                </value>
                <value>
                    <fullName>ARQUITETO ESPECIALISTA DE SOLUÇÕES 4</fullName>
                </value>
                <value>
                    <fullName>CONSULTOR 1</fullName>
                </value>
                <value>
                    <fullName>CONSULTOR 2</fullName>
                </value>
                <value>
                    <fullName>CONSULTOR SENIOR 1</fullName>
                </value>
                <value>
                    <fullName>CONSULTOR SENIOR 2</fullName>
                </value>
                <value>
                    <fullName>CONSULTOR SENIOR ESPECIALISTA</fullName>
                </value>
                <value>
                    <fullName>COORDENADOR DE SISTEMAS 1</fullName>
                </value>
                <value>
                    <fullName>COORDENADOR DE SISTEMAS 2</fullName>
                </value>
                <value>
                    <fullName>DIRETOR</fullName>
                </value>
                <value>
                    <fullName>GERENTE 1</fullName>
                </value>
                <value>
                    <fullName>GERENTE 2</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE SISTEMAS 1</fullName>
                </value>
                <value>
                    <fullName>GERENTE ESPECIALISTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rua__c</fullName>
        <label>Endereço</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_DMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce DMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(Roles__c,&quot;GERENTE SENIOR&quot;),
ISPICKVAL(Roles__c,&quot;GERENTE 1&quot;),
ISPICKVAL(Roles__c,&quot;GERENTE 2&quot;),
ISPICKVAL(Roles__c,&quot;SOCIO&quot;)), &quot;GESTAO&quot;, &quot;STAFF&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento__c</fullName>
        <label>Segmento</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Energy, Resources and Industrials</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Life Science and Health Care</fullName>
                </value>
                <value>
                    <fullName>Government and Public Groups</fullName>
                </value>
                <value>
                    <fullName>Technology, Media and Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShutdownDate__c</fullName>
        <description>Campo para registrar a data de desligamento do funcionário.</description>
        <inlineHelpText>Data de desligamento do funcionário.</inlineHelpText>
        <label>Shutdown Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortOfWithdrawal__c</fullName>
        <label>Tipo de Ausência</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Férias</fullName>
                </value>
                <value>
                    <fullName>Doença</fullName>
                </value>
                <value>
                    <fullName>Acidente De Trabalho</fullName>
                </value>
                <value>
                    <fullName>Maternidade</fullName>
                </value>
                <value>
                    <fullName>Amamentação</fullName>
                </value>
                <value>
                    <fullName>Happy Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Srcum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Srcum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Data de Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Campo para registrar o estado do funcionário.</description>
        <inlineHelpText>Estado do funcionário</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <label>Ativo</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <label>Inativo</label>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Segmento__c</fullName>
        <label>Sub Segmento</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Experience</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Retail, Wholesale and Distribution</fullName>
                </value>
                <value>
                    <fullName>Transportation, Hospitality and Services</fullName>
                </value>
                <value>
                    <fullName>Industrial Products and Construction</fullName>
                </value>
                <value>
                    <fullName>Power and Utilities</fullName>
                </value>
                <value>
                    <fullName>Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>Oil, Gas and Chemicals</fullName>
                </value>
                <value>
                    <fullName>Banking and Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Civil Government</fullName>
                </value>
                <value>
                    <fullName>International Donor Organizations</fullName>
                </value>
                <value>
                    <fullName>Health and Social Care</fullName>
                </value>
                <value>
                    <fullName>Defense, Security and Justice</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Pontos_distribuidos__c +  Pontuacao_Recebida_Max_Permitida__c + (IF ( Distribuiu_Pontos__c = true, 0, -50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Technology, Media and Telecom</inlineHelpText>
        <label>Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telecomunicacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telecomunicação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <externalId>true</externalId>
        <label>Time</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Government and Public Services</inlineHelpText>
        <label>Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateDataLoader__c</fullName>
        <label>Update Data Loader</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VacationDeadline__c</fullName>
        <description>Data limite para o funcionário tirar férias.</description>
        <inlineHelpText>Data limite de férias.</inlineHelpText>
        <label>VacationDeadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vlocity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vlocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WithdrawalStatus__c</fullName>
        <label>Status da Ausência</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em análise</fullName>
                </value>
                <value>
                    <fullName>Solicitação Atendida</fullName>
                </value>
                <value>
                    <fullName>Solicitação Negada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearnsFor__c</fullName>
        <description>Campo para descrever a area que o funcionário anseia.</description>
        <inlineHelpText>Area que o funcionário anseia.</inlineHelpText>
        <label>Yearns For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Campo para registrar o CEP do funcionário</description>
        <inlineHelpText>CEP do funcionário</inlineHelpText>
        <label>Zip Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cargo_Ajustado__c</columns>
        <columns>Time__c</columns>
        <columns>Email__c</columns>
        <columns>Roles__c</columns>
        <columns>Status__c</columns>
        <columns>Coachs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
</CustomObject>